5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1734_2503.log
== TEST (2019-05-16 08:26:14) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
while(n>1):
	sinal=(-1)**i
	soma=soma+sinal*(4/(2**1+1))
	i=i+1
print(soma,8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+sinal*(4/(2**1+1))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:27:03) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
while(n>1):
	sinal=(-1)**i
	soma=soma+sinal*(4/(2**1+1))
	i=i+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+sinal*(4/(2**1+1))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:27:53) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
while(i<n):
	sinal=(-1)**i
	soma=soma+sinal*(4/(2**1+1))
	i=i+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+sinal*(4/(2**1+1))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:29:15) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	soma=soma+sinal*(4/n1)
	n1=n1+2
	i=i+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma=soma+sinal*(4/n1)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:30:58) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:08) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.30478
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2503/main.py", line 10, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:34) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.174055
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.18918478
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-3.07025462
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:36) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.194623
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.18918478
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-3.07025462
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:36) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.143932
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.07025462
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:36) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.297121
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.18918478
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.07025462
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-3.14899996
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:37) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.153191
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.18918478
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-3.07025462
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:38) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.193234
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.18918478
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-3.14899996
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:38) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.18773
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-3.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-3.18918478
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-3.14899996
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:38) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.28593
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2503/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:31:38) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.294241
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2503/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:31:40) 
-- CODE:
n=int(input("digite o numero:"))
i=1
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- OUTPUT:
-3.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:32:46) 
-- CODE:
n=int(input("digite o numero:"))
i=0
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:32:55) 
-- CODE:
n=int(input("digite o numero:"))
i=0
t=0
n1=1
while(i<n):
	sinal=(-1)**i
	t= t + sinal * (4/n1)
	n1= n1 + 2
	i= i + 1
print(round(t,8))
-- EXECUTION TIME:
0.126726
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
